tests/NormalTests/paczka1/small_fuzzy/27748292.err
Error in line 2: 1kh7l A621 25,89
Error in line 3: 1kh7l A621 112,9
